[tool.poetry]
name = "nonebot-anime"
version = "0.1.0"
description = "Bilibili番剧查询"
authors = ["richardchien <https://github.com/richardchien>", "yanyongyu <https://github.com/yanyongyu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
nonebot = "^1.3"
httpx = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
